llvm/test/tools/llubi/undef.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

@g = global i32 undef

define void @main() {
  %add = add i32 1, undef
  %load = load i32, ptr @g
  ret void
}
; CHECK: error: Failed to initialize global values (e.g., the memory limit may be too low).
